<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="testvalueanimation">TestValueAnimation</string>
    <string name="testobjectanimation">TestObjectAnimation</string>
    <string name="assemble">assemble</string>
    <string name="disassemble">disassemble</string>
    <string name="main_thread_exception">main thread exception</string>
    <string name="other_thread_exception">other thread exception</string>
    <string name="bind_service">bind service</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="logout">logout</string>
    <string name="unregister">unregister</string>
    <string name="get_student">getStudent</string>
    <string name="changefragmentb">changeFragmentB</string>
</resources>
