<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/bind_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_service"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>

    <Button
        android:id="@+id/unregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unregister"/>

    <Button
        android:id="@+id/get_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_student"/>
</LinearLayout>
