<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/assemble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assemble"/>

    <Button
        android:id="@+id/disassemble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disassemble"/>

    <Button
        android:id="@+id/main_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_thread_exception"/>

    <Button
        android:id="@+id/other_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_thread_exception"/>
</LinearLayout>